Changelog for 1.2.14
* Fixed double escaping of tex under some circumstances (Seneca)
* Added fix for bad summary information in AR/AP transactions (1800065,
1800069, Chris T)
* Fixed posting issue behind AR/AP transaction report anomilies (Chris T)

Changelog for 1.2.13
* Fixed all known implicit cast issues with PostgreSQL 8.3 (Chris T)
* Fixed Vendor Info Incorrectly Escaped in Check Printing Module(1844159,
Chris T)
* Fixed Serial numbers not preserved on order consolidation(1849585, Chris T)
* Adding fix for double-incrementing id sequence(Chris T)
* Fixed:  DBD::Pg Error Searching for PO by description (1876963, Chris T)
* fixed syntax error in COMMENT ON INDEX statement (Seneca)
* Fixed the display of taxes with '%' in PDF invoices (Seneca)
* Fixed broken substitution in update_defaults (Seneca)


Changelog for 1.2.12
* Committed Tony Brummett's fix for last/avg costs updates (Chris T)
* Committing fix for User.pm error handling (1860699, Chris T)
* Some revisions in spec files (Chris M)
* Changed LICENSE directive in rpm to the more descriptive gpl v2+ (Chris T)
* Fixed bug 1835463, cannot transfer to warehouses (Chris T)
* Adding fix for 1771834, inventory lost converting order to invoice (Chris T)
* Fixed 1812792, (discount box blank after part lookup (Chris T)
* Fixed bug 1839776-- reposting sales invoice causes duplication.(Chris T)


Changelog for 1.2.11
* Simplified obtaining years with transactions (Chris T)
* Fixed dataset creation (Chris T)
* Tax display fixes for AR/AP transactions (Chris T, 1794077, 1790768)
* Fixed encoding errors in numeral to text conversion (Seneca)
* Fixed the displayed number format for AP invoice taxes (Seneca)
* Fixed the selection of taxes when validto is involved (Seneca, anarcat's
  addtion to 1818792) 



Changelog for 1.2.10
* Fixed bug 1765161, post button duplicates invoices.(Chris T)
* Adding a minor fixes to COGS edge cases for reversed invoices. (Chris T)
* Fixed bug 1811022.  Closedto date problems (Seneca)