@@ -1,8 +1,11 @@
 Changelog for 1.2.14
+* Build.PL now requires Test::Trap (Chris T, 1872529)
 * Fixed double escaping of tex under some circumstances (Seneca)
 * Added fix for bad summary information in AR/AP transactions (1800065,
 1800069, Chris T)
 * Fixed posting issue behind AR/AP transaction report anomilies (Chris T)
+* Fixed taxes added twice when viewing existing transaction (Chris T)
+* Fixed erroneous discount lines in POS invoice (Chris T)
 
 Changelog for 1.2.13
 * Fixed all known implicit cast issues with PostgreSQL 8.3 (Chris T)
